Merge WebGPU backend (#1514)
* *:ꔫ:*Renderer Project*:ꔫ:*

* Create workspaces for ffi and the renderer (#1275)

* Inital scaffold for libprocessing ffi.

* Remove EAP.

* Update docs.

* Factor out gradle utils. Add flag for disabling webgpu and enforcing android source level compat.

* Remove processing.h

* Set java version for all projects.

* libprocessing ffi error handling (#1293)

* FFI error setup

* Clear before init.

* Basic app lifecycle / surface creation.

* Throw when not on macos.

* Implement `background` method (#1308)

* Implement background.

* Install wayland deps.

* Support for windows surfaces. (#1310)

* Implement basic rendering flow (#1322)

* Implement basic rendering flow

* Fix naming.

* Actually fix rename.

* libprocessing submodule

* --recursive when cloning repo

* Enable submodule checkout in Gradle workflow

Added support for submodules in the checkout step.

* Enable submodules in checkout steps

Added submodule support to the checkout steps.

* Wayland support with new WebGPU renderer

* Gradle fixes from libprocessing refactor. (#1346)

* Updates from libprocessing. (#1392)

* Updates from libprocessing.

* Fixes for compat with main 17.

* Fixup docs.

* Upgrade to jdk-25.

* Upgrade to jdk-25.

* Materials, lights, input event forwarding, ellipse fix.

* Get the gradle sketch runner working locally.

* Conditionally execute webgpu tests

* ProcessingLibraryPlugin JVM Toggle update

* 4.5.5 in gradle.properties

* ProcessingPlugin fixes

---------

Co-authored-by: Moon D. <moon@softmoon.world>
Co-authored-by: Moon <catilac@users.noreply.github.com>
Co-authored-by: Stef Tervelde <stef@steftervelde.nl>